subprojects/gst-devtools/validate/tests/check/validate/overrides.c
@@ -103,7 +103,8 @@ gst_validate_suite (void)
   if (atexit (gst_validate_deinit) != 0) {
     GST_ERROR ("failed to set gst_validate_deinit as exit function");
   }
-
+  // Do not abort on critical issues, as this test will generate them on purpose.
+  g_setenv ("GST_VALIDATE", "print_issues", TRUE);
   g_setenv ("GST_VALIDATE_REPORTING_DETAILS", "all", TRUE);
   gst_validate_init ();
   tcase_add_test (tc_chain, check_text_overrides);
